# EBF

./: compile.m  demo.m  testASIFT.m
ASIFT/: ASIFT.m  compileASIFT.m  mexASIFT.cpp
ASIFT/demo_ASIFT_src/: CMakeLists.txt  compute_asift_keypoints.h  demo_ASIFT.cpp  demo_ASIFT.m  keys1.txt  keys2.txt  matchings.txt  mexASIFT.mexw64
ASIFT/lib/: demo_ASIFT.lib
ASIFT/src/: compute_asift_keypoints.cpp
C++/: CMakeLists.txt
C++/include/EBF/: Header.h  Tools.h  bilateral_function.h  fastmath.def  getInlier.h  get_gsm_fast.h  get_gsm_sse2_.h  huber_function.h  likehood_function.h  math_avx.h  math_sse2.h  utility.h
C++/include/libASIFT/: libASIFT.h  library.h
C++/include/libLBFGS/: lbfgs.h
C++/include/libMATCH/: libMATCH.h
C++/lib/Release/: libASIFT.lib  libLBFGS.lib  libMATCH.lib
C++/src/: CMakeLists.txt
C++/src/EBF/: demo.cpp  filter_matches.cpp  utility.cpp
C++/src/libASIFT/: compute_asift_keypoints.cpp  libASIFT.cpp
C++/src/libMatch/: libMATCH.cpp
C++/src/test/: testAsiftAndMatch.cpp
Cpp/: CMakeLists.txt
Cpp/include/: frame.h
Cpp/include/EBF/: Header.h  Tools.h  bilateral_function.h  getInlier.h  math_avx.h  math_sse2.h
Cpp/include/libASIFT/: matrix.h
Cpp/include/libMATCH/: libMATCH.h
Cpp/src/: CMakeLists.txt
Cpp/src/EBF/: demo.cpp  filter_matches.cpp
Cpp/src/libMATCH/: libMATCH.cpp
Matlab/: demo.m  im_prepare.m  testASIFT.m  testBF.m
Matlab/ASIFT/lib/Release/: libASIFT.lib
Matlab/ASIFT/src/: CMakeLists.txt  mexASIFT.cpp
Matlab/bilteralFunction/: Affine_scale_fromASIFT.m  G_compute_fast.m  affine_inliers.m  bilateral_matcher.m  clean_Ay2x.m  filter_matches_tune.m  getA_s_y2x_new.m  grad_aff.m  grad_aff2.m  grad_desc_huber_official.m  inlier_estimate_reguess.m
Matlab/draw/: display_match_trad_enum.m
Matlab/matching/: compileMatching.m
Matlab/matching/src/: mexMatching.cpp
Matlab/mex/: cv_match.m  mexASIFT.mexw64  mexMatching.mexw64
Matlab/newBF/: BiFun.m  BilteralFunCost.m  LikehoodFilter.m  computeNumericalGradient.m  constructBFdata.m  constructLikehoodData.m  featureNormalize.m  filter_matches.m  firBilteralFun.m  fitLikehoodModel.m  getCleandAffine.m  likehoodCost.m  p_huber_fun.m  preidctBF.m
Matlab/newBF/minFunc/: minFunc.m
bilteralFunction/: A_vec2_matrix_tune.m  G_compute_fast.m  affine_inliers.m  affine_verification_matlab.m  grad_1d.m  grad_desc_affine.m  matches2points_affine_reguess.m
draw/: ShowMatches_color_split.m
matching/: compileMatching.m
matching/src/: mexMatching.cpp
mex/: ASIFT.m  cv_match.m  mexASIFT.mexw64
