
# libASIFT
AUX_SOURCE_DIRECTORY( ./libASIFT  LIBASIFT_SRC )
INCLUDE_DIRECTORIES( ../include/libASIFT )
ADD_LIBRARY( libASIFT ${LIBASIFT_SRC} )

# libLBFGS
AUX_SOURCE_DIRECTORY( ./libLBFGS  libLBFGS_SRC )
INCLUDE_DIRECTORIES( ../include/libLBFGS )
ADD_LIBRARY( libLBFGS ${libLBFGS_SRC} )

# libMATCH
AUX_SOURCE_DIRECTORY( ./libMATCH  libMATCH_SRC )
INCLUDE_DIRECTORIES( ../include/libMATCH )
ADD_LIBRARY( libMATCH ${libMATCH_SRC} )
TARGET_LINK_LIBRARIES( libMATCH  ${OpenCV_LIBS} )


# EBF
AUX_SOURCE_DIRECTORY( ./EBF  EBF_SRC )
INCLUDE_DIRECTORIES( ../include/EBF )
ADD_EXECUTABLE( EBF  ${EBF_SRC})
TARGET_LINK_LIBRARIES( EBF  
libASIFT libMATCH libLBFGS ${OpenCV_LIBS} 
)

# testLBFGS
ADD_EXECUTABLE( testLBFGS  ./test/testLBFGS.cpp )
TARGET_LINK_LIBRARIES( testLBFGS libLBFGS )





